fix : added z-index

--- a/components/modal/modal.css
+++ b/components/modal/modal.css
@@ -7,6 +7,7 @@
     border-radius: 0.4rem;
     padding:0.5rem;
     justify-content:space-between;
+    z-index: 999;
 }
 
 .modal-title{
